--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 </head>
-<body>
+<body>        
     <ul class="cb-slideshow">
-        <li><span>Image 01</span></li>
-        <li><span>Image 02</span></li>
-        <li><span>Image 03</span></li>
-        <li><span>Image 04</span></li>
-        <li><span>Image 05</span></li>
-        <li><span>Image 06</span></li>
+        <li><span></span></li>
+        <li><span></span></li>
+        <li><span></span></li>
+        <li><span></span></li>
+        <li><span></span></li>
+        <li><span></span></li>
     </ul>
     <nav>
-        <h1>Jia Lee</h1>
+        <a href="http://jialeeart.github.io"><img id="signature" src="images/sign jl1.png"></a>
         <div id="navLinks">
             <a href="#">WORK</a>
             <a href="#">BIO</a>
-            <a href="#">CONTACT</a>
+            <a href="http://jialeeart.github.io/contact.html">CONTACT</a>
         </div>
     </nav>
 </body>
