--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <a href="http://jialeeart.github.io"><img id="signature" src="images/sign jl1.png"></a>
         <div id="navLinks">
             <a href="#">WORK</a>
-            <a href="#">BIO</a>
+            <a href="http://jialeeart.github.io/bio.html">BIO</a>
             <a href="http://jialeeart.github.io/contact.html">CONTACT</a>
         </div>
     </nav>
@@ -27,7 +27,7 @@
             <p>+5 (555) 555-5555</p>
         </div>
         <div id="sm1">
-            <i class="fab fa-facebook fa-5x"></i>
+            <i class="fab fa-linkedin fa-5x"></i>
         </div>
 
         <div id="sm2">
