--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="http://jialeeart.github.io"><img id="signature" src="images/sign jl1.png"></a>
         <div id="navLinks">
             <a href="#">WORK</a>
-            <a href="#">BIO</a>
+            <a href="http://jialeeart.github.io/bio.html">BIO</a>
             <a href="http://jialeeart.github.io/contact.html">CONTACT</a>
         </div>
     </nav>
