--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
     <div id="contact">
         <div id="email">
-            <a href="malito:jialee0211@gmail.com"><i class="fas fa-envelope fa-5x"></i></a>
+            <a href="mailto:jialee0211@gmail.com"><i class="fas fa-envelope fa-5x"></i></a>
             <p>jialee0211@gmail.com</p>
         </div>
         <div id="phone">
@@ -27,19 +27,19 @@
             <p>+5 (555) 555-5555</p>
         </div>
         <div id="sm1">
-            <i class="fab fa-linkedin fa-5x"></i>
+            <a href="https://www.linkedin.com/in/jia-lee-bb55aa95/" target="_blank"><i class="fab fa-linkedin fa-5x"></i></a>
         </div>
 
         <div id="sm2">
-            <i class="fab fa-instagram fa-5x"></i>
+            <a href="https://www.instagram.com/jia_eel/" target="_blank"><i class="fab fa-instagram fa-5x"></i></a>
         </div>
 
         <div id="sm3">
-            <i class="fab fa-behance-square fa-5x"></i>
+            <a href="https://www.behance.net/jlee2449cda" target="_blank"><i class="fab fa-behance-square fa-5x"></i></a>
         </div>
 
         <div id="sm4">
-            <i class="fab fa-dribbble-square fa-5x"></i>
+            <a href="https://dribbble.com/jialeeillust" target="_blank"><i class="fab fa-dribbble-square fa-5x"></i></a>
         </div>    
     </div>
 </body>
