--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.1/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 </head>
-<body>        
+<body>
+    <div id="contactBackground">
+
+    </div>
+    
     <nav>
         <a href="http://jialeeart.github.io"><img id="signature" src="images/sign jl1.png"></a>
         <div id="navLinks">
@@ -22,10 +26,7 @@
             <a href="mailto:jialee0211@gmail.com"><i class="fas fa-envelope fa-5x"></i></a>
             <p>jialee0211@gmail.com</p>
         </div>
-        <div id="phone">
-            <i class="fas fa-mobile fa-5x"></i>
-            <p>+5 (555) 555-5555</p>
-        </div>
+
         <div id="sm1">
             <a href="https://www.linkedin.com/in/jia-lee-bb55aa95/" target="_blank"><i class="fab fa-linkedin fa-5x"></i></a>
         </div>
