--- a/work.html
+++ b/work.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="work.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.1/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
     <nav>
