reorganize images, change work layout

--- a/work.html
+++ b/work.html
@@ -23,19 +23,30 @@
     </nav>
 
     <div id="work">
-      <img class="workImg" src="images/broken_vase.jpg">
-      <img class="workImg" src="images/lace_and_feathers.jpg">
-      <img class="workImg" src="images/lace_diamonds.jpg">
-      <img class="workImg" src="images/pants.jpg">
-      <img class="workImg" src="images/pink_vase.jpg">
-      <img class="workImg" src="images/pool_tiles.jpg">
-      <img class="workImg" src="images/rabbit.jpg">
-      <img class="workImg" src="images/shells.jpg">
-      <img class="workImg" src="images/sock.jpg">
-      <img class="workImg" src="images/spring.png">
-      <img class="workImg" src="images/tassel.jpg">
-      <img class="workImg" src="images/vase_blue.jpg">
-      <img class="workImg" src="images/white_vase.jpg">
+      <div class="workBlock">
+        <img class="workImg" src="images/black&white/Frog.jpg">
+        <h6 class="workTxt">Black & White</h6>
+      </div>
+
+      <div class="workBlock">
+        <img class="workImg" src="images/childrens/miss-muffet-spider.png">
+        <h6 class="workTxt">Childrens</h6>
+      </div>
+
+      <div class="workBlock">
+        <img class="workImg" src="images/graduation show/broken_vase.jpg">
+        <h6 class="workTxt">Graduation Show</h6>
+      </div>
+
+      <div class="workBlock">
+        <img class="workImg" src="images/PS/dive_training.png">
+        <h6 class="workTxt">PS</h6>
+      </div>
+
+      <div class="workBlock">
+        <img class="workImg" src="images/Summit Logo Branding/ppt_roadmap_1.png">
+        <h6 class="workTxt">Summit Logo Branding</h6>
+      </div>
     </div>
 </body>
 </html>
