added copyright and line

--- a/contact.html
+++ b/contact.html
@@ -41,12 +41,16 @@
         </div>
 
         <div id="sm3">
-            <a href="https://www.behance.net/jlee2449cda" target="_blank"><i class="fab fa-behance-square fa-5x"></i></a>
+            <a href="https://www.behance.net/illust_jia_lee" target="_blank"><i class="fab fa-behance-square fa-5x"></i></a>
         </div>
 
         <div id="sm4">
             <a href="https://dribbble.com/jialeeillust" target="_blank"><i class="fab fa-dribbble-square fa-5x"></i></a>
-        </div>    
+        </div>
+
+        <footer>
+            <h4>© 2019 Jia Lee</h4>
+        </footer>          
     </div>
 </body>
 </html>
