--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><span></span></li>
         <li><span></span></li>
     </ul>
+    
     <nav>
         <a href="http://jialeeart.github.io"><img id="signature" src="images/sign jl1.png"></a>
         <div id="navLinks">
@@ -27,5 +28,9 @@
             <a href="http://jialeeart.github.io/contact.html">CONTACT</a>
         </div>
     </nav>
+
+    <footer>
+        <h4>© 2019 Jia Lee</h4>
+    </footer>      
 </body>
 </html>
