--- a/work.html
+++ b/work.html
@@ -21,32 +21,39 @@
             <a href="http://jialeeart.github.io/contact.html">CONTACT</a>
         </div>
     </nav>
-
+    
+    
     <div id="work">
-      <div class="workBlock">
-        <img class="workImg" src="images/black&white/Frog.jpg">
+      <div class="workBlock" id="wb1">
+        <a href="#"><img class="workImg" src="images/black&white/Frog.jpg"></a>
         <h6 class="workTxt">Black & White</h6>
       </div>
 
-      <div class="workBlock">
-        <img class="workImg" src="images/childrens/miss-muffet-spider.png">
+      <div class="workBlock" id="wb2">
+        <a href="#"><img class="workImg" src="images/childrens/miss-muffet-spider.png"></a>
         <h6 class="workTxt">Childrens</h6>
       </div>
 
-      <div class="workBlock">
-        <img class="workImg" src="images/graduation show/broken_vase.jpg">
+      <div class="workBlock" id="wb3">
+        <a href="#"><img class="workImg" src="images/graduation show/lace_and_feathers.jpg"></a>
         <h6 class="workTxt">Graduation Show</h6>
       </div>
 
-      <div class="workBlock">
-        <img class="workImg" src="images/PS/dive_training.png">
+      <div id="ln"></div>
+
+      <div class="workBlock" id="wb4">
+        <a href="#"><img class="workImg" src="images/PS/dive_training.png"></a>
         <h6 class="workTxt">PS</h6>
       </div>
 
-      <div class="workBlock">
-        <img class="workImg" src="images/Summit Logo Branding/ppt_roadmap_1.png">
+      <div class="workBlock" id="wb5">
+        <a href="#"><img class="workImg" src="images/Summit Logo Branding/summit_logo.png"></a>
         <h6 class="workTxt">Summit Logo Branding</h6>
       </div>
     </div>
+
+    <workFooter>
+      <h4>© 2019 Jia Lee</h4>
+    </workFooter>  
 </body>
 </html>
