another attempt fixing bioInfo margin

--- a/work/graduationShow.html
+++ b/work/graduationShow.html
@@ -45,22 +45,22 @@
 
       <div class="workBlock">
         <img class="workImg" src="../images/graduation show/pink_vase.jpg">
-        <h6 class="workTxt">Broken Vase</h6>
+        <h6 class="workTxt">Pink Vase</h6>
       </div>
   
       <div class="workBlock">
         <img class="workImg" src="../images/graduation show/pool_tiles.jpg">
-        <h6 class="workTxt">Lace and Feathers</h6>
+        <h6 class="workTxt">Pool Tiles</h6>
       </div>
 
       <div class="workBlock">
         <img class="workImg" src="../images/graduation show/rabbit.jpg">
-        <h6 class="workTxt">Lace Diamonds</h6>
+        <h6 class="workTxt">Rabbit</h6>
       </div>
 
       <div class="workBlock">
         <img class="workImg" src="../images/graduation show/shells.jpg">
-        <h6 class="workTxt">Pants</h6>
+        <h6 class="workTxt">Shells</h6>
       </div>
 
       <div class="workBlock">
