added thumbnail folder to all images

--- a/work.html
+++ b/work.html
@@ -24,29 +24,29 @@
 
     <div id="work">
       <div class="workBlock" id="wb1">
-        <a href="http://jialeeart.github.io/work/blackAndWhite.html"><img class="workImg" src="images/black&white/Frog.jpg"></a>
+        <a href="http://jialeeart.github.io/work/blackAndWhite.html"><img class="workImg" src="images/black&white/thumbnail/Frog.jpg"></a>
         <h6 class="workTxt">Black & White</h6>
       </div>
 
       <div class="workBlock" id="wb2">
-        <a href="http://jialeeart.github.io/work/childrens.html"><img class="workImg" src="images/childrens/miss-muffet-spider.png"></a>
+        <a href="http://jialeeart.github.io/work/childrens.html"><img class="workImg" src="images/childrens/thumbnail/shrubs_w_feet_2.jpg"></a>
         <h6 class="workTxt">Childrens</h6>
       </div>
 
       <div class="workBlock" id="wb3">
-        <a href="http://jialeeart.github.io/work/graduationShow.html"><img class="workImg" src="images/graduation show/lace_and_feathers.jpg"></a>
+        <a href="http://jialeeart.github.io/work/graduationShow.html"><img class="workImg" src="images/graduation show/thumbnail/lace_and_feathers.jpg"></a>
         <h6 class="workTxt">Graduation Show</h6>
       </div>
 
       <div id="ln"></div>
 
       <div class="workBlock" id="wb4">
-        <a href="http://jialeeart.github.io/work/PS.html"><img class="workImg" src="images/PS/dive_training.png"></a>
-        <h6 class="workTxt">PS</h6>
+        <a href="http://jialeeart.github.io/work/PS2019.html"><img class="workImg" src="images/PS2019/thumbnail/dive_training.png"></a>
+        <h6 class="workTxt">PS Illustrations 2019</h6>
       </div>
 
       <div class="workBlock" id="wb5">
-        <a href="http://jialeeart.github.io/work/summitLogoBranding.html"><img class="workImg" src="images/Summit Logo Branding/summit_logo.png"></a>
+        <a href="http://jialeeart.github.io/work/summitLogoBranding.html"><img class="workImg" src="images/Summit Logo Branding/thumbnail/summit_logo.png"></a>
         <h6 class="workTxt">Summit Logo Branding</h6>
       </div>
     </div>
