--- a/work/blackAndWhite.html
+++ b/work/blackAndWhite.html
@@ -24,17 +24,17 @@
 
     <div id="work">
       <div class="workBlock">
-        <img class="workImg" src="../images/black&white/Frog.jpg">
+        <img class="workImg" src="../images/black&white/thumbnail/Frog.jpg">
         <h6 class="workTxt">Frog</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/black&white/Snake_korean.jpg">
+        <img class="workImg" src="../images/black&white/thumbnail/Snake_korean.jpg">
         <h6 class="workTxt">Snake Korean</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/black&white/Streets.jpg">
+        <img class="workImg" src="../images/black&white/thumbnail/Streets.jpg">
         <h6 class="workTxt">Streets</h6>
       </div>  
     </div>
