--- a/work/graduationShow.html
+++ b/work/graduationShow.html
@@ -24,62 +24,62 @@
 
     <div id="work">
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/broken_vase.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/broken_vase.jpg">
         <h6 class="workTxt">Broken Vase</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/lace_and_feathers.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/lace_and_feathers.jpg">
         <h6 class="workTxt">Lace and Feathers</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/lace_diamonds.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/lace_diamonds.jpg">
         <h6 class="workTxt">Lace Diamonds</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/pants.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/pants.jpg">
         <h6 class="workTxt">Pants</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/pink_vase.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/pink_vase.jpg">
         <h6 class="workTxt">Pink Vase</h6>
       </div>
   
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/pool_tiles.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/pool_tiles.jpg">
         <h6 class="workTxt">Pool Tiles</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/rabbit.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/rabbit.jpg">
         <h6 class="workTxt">Rabbit</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/shells.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/shells.jpg">
         <h6 class="workTxt">Shells</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/sock.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/sock.jpg">
         <h6 class="workTxt">Sock</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/tassel.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/tassel.jpg">
         <h6 class="workTxt">Tassel</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/vase_blue.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/vase_blue.jpg">
         <h6 class="workTxt">Vase Blue</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/white_vase.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/white_vase.jpg">
         <h6 class="workTxt">White Vase</h6>
       </div>
     </div>
