--- a/work/graduationShow.html
+++ b/work/graduationShow.html
@@ -9,12 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="../main.js"></script>
+    <script src="workDisplay.js"></script>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+    <link rel="manifest" href="../site.webmanifest">
+    <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -29,65 +30,69 @@
             <a href="http://jialeeart.github.io/contact.html">CONTACT</a>
         </div>
     </nav>
-
+    
+    <div id="fullDisplay">
+      <img>
+    </div>
+  
     <div id="work">
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/broken_vase.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/broken_vase.jpg" onclick="fullDisplay('graduation show','broken_vase.jpg')">
         <h6 class="workTxt">Broken Vase</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/lace_and_feathers.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/lace_and_feathers.jpg" onclick="fullDisplay('graduation show','lace_and_feathers.jpg')">
         <h6 class="workTxt">Lace and Feathers</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/lace_diamonds.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/lace_diamonds.jpg" onclick="fullDisplay('graduation show','lace_diamonds.jpg')">
         <h6 class="workTxt">Lace Diamonds</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/pants.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/pants.jpg" onclick="fullDisplay('graduation show','pants.jpg')">
         <h6 class="workTxt">Pants</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/pink_vase.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/pink_vase.jpg" onclick="fullDisplay('graduation show','pink_vase.jpg')">
         <h6 class="workTxt">Pink Vase</h6>
       </div>
   
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/pool_tiles.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/pool_tiles.jpg" onclick="fullDisplay('graduation show','pool_tiles.jpg')">
         <h6 class="workTxt">Pool Tiles</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/rabbit.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/rabbit.jpg" onclick="fullDisplay('graduation show','rabbit.jpg')">
         <h6 class="workTxt">Rabbit</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/shells.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/shells.jpg" onclick="fullDisplay('graduation show','shells.jpg')">
         <h6 class="workTxt">Shells</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/sock.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/sock.jpg" onclick="fullDisplay('graduation show','sock.jpg')">
         <h6 class="workTxt">Sock</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/tassel.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/tassel.jpg" onclick="fullDisplay('graduation show','tassel.jpg')">
         <h6 class="workTxt">Tassel</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/vase_blue.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/vase_blue.jpg" onclick="fullDisplay('graduation show','vase_blue.jpg')">
         <h6 class="workTxt">Vase Blue</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/white_vase.jpg">
+        <img class="workImg" src="../images/graduation show/thumbnail/white_vase.jpg" onclick="fullDisplay('graduation show','white_vase.jpg')">
         <h6 class="workTxt">White Vase</h6>
       </div>
     </div>
