--- a/work.html
+++ b/work.html
@@ -57,6 +57,11 @@
         <a href="http://jialeeart.github.io/work/summitLogoBranding.html"><img class="workImg" src="images/Summit Logo Branding/thumbnail/summit_logo.png"></a>
         <h6 class="workTxt">Summit Logo Branding</h6>
       </div>
+        
+        <div class="workBlock" id="wb6">
+        <a href="http://jialeeart.github.io/work/summitLogoBranding.html"><img class="workImg" src="images/Summit Logo Branding/thumbnail/summit_logo.png"></a>
+        <h6 class="workTxt">Motion Graphics</h6>
+      </div>
     </div>
 
     <workFooter>
