--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
       </div>
         
         <div class="workBlock" id="wb6">
-        <a href="http://jialeeart.github.io/work/summitLogoBranding.html"><img class="workImg" src="images/Summit Logo Branding/thumbnail/summit_logo.png"></a>
+        <a href="http://jialeeart.github.io/work/Motion.html"><img class="workImg" src="images/Motion/thumbnail/banner.png"></a>
         <h6 class="workTxt">Motion Graphics</h6>
       </div>
     </div>
