--- a/work/Motion.html
+++ b/work/Motion.html
@@ -38,17 +38,17 @@
     <div id="work">
       <div class="workBlock">
         <img class="workImg" src="../images/Motion/thumbnail/goldfish.png" onclick="fullDisplay('Motion','goldfish.gif')">
-        <h6 class="workTxt">Dive Training</h6>
+        <h6 class="workTxt">Goldfish</h6>
       </div>
 
       <div class="workBlock">
         <img class="workImg" src="../images/Motion/thumbnail/banner.png" onclick="fullDisplay('Motion','banner.gif')">
-        <h6 class="workTxt">Launch Space</h6>
+        <h6 class="workTxt">Butterfly</h6>
       </div>
 
       <div class="workBlock">
         <img class="workImg" src="../images/Motion/thumbnail/succulent.png" onclick="fullDisplay('Motion','succulent.gif')">
-        <h6 class="workTxt">Roadmap</h6>
+        <h6 class="workTxt">Working Together</h6>
       </div>
     </div>
 
