testing prev and next image arrows

--- a/work.html
+++ b/work.html
@@ -32,7 +32,7 @@
 
     <div id="work">
       <div class="workBlock" id="wb1">
-        <a href="http://jialeeart.github.io/work/blackAndWhite.html"><img class="workImg" src="images/black&white/thumbnail/Frog.jpg"></a>
+        <a href="http://jialeeart.github.io/work/blackAndWhite.html"><img class="workImg" src="images/blackAndWhite/thumbnail/Frog.jpg"></a>
         <h6 class="workTxt">Black & White</h6>
       </div>
 
@@ -42,7 +42,7 @@
       </div>
 
       <div class="workBlock" id="wb3">
-        <a href="http://jialeeart.github.io/work/graduationShow.html"><img class="workImg" src="images/graduation show/thumbnail/lace_and_feathers.jpg"></a>
+        <a href="http://jialeeart.github.io/work/graduationShow.html"><img class="workImg" src="images/graduationShow/thumbnail/lace_and_feathers.jpg"></a>
         <h6 class="workTxt">Graduation Show</h6>
       </div>
 
@@ -54,7 +54,7 @@
       </div>
 
       <div class="workBlock" id="wb5">
-        <a href="http://jialeeart.github.io/work/summitLogoBranding.html"><img class="workImg" src="images/Summit Logo Branding/thumbnail/summit_logo.png"></a>
+        <a href="http://jialeeart.github.io/work/summitLogoBranding.html"><img class="workImg" src="images/summitLogoBranding/thumbnail/summit_logo.png"></a>
         <h6 class="workTxt">Summit Logo Branding</h6>
       </div>
         
