--- a/work/PS2019.html
+++ b/work/PS2019.html
@@ -32,7 +32,11 @@
     </nav>
 
     <div id="fullDisplay">
+      <i class="fas fa-chevron-left fullDisplayArrow" onclick="prevImage('PS2019')"></i>
+
       <img>
+
+      <i class="fas fa-chevron-right fullDisplayArrow" onclick="nextImage('PS2019')"></i>
     </div>
   
     <div id="work">
