--- a/work/childrens.html
+++ b/work/childrens.html
@@ -32,7 +32,11 @@
     </nav>
 
     <div id="fullDisplay">
+      <i class="fas fa-chevron-left fullDisplayArrow" onclick="prevImage('childrens')"></i>
+
       <img>
+
+      <i class="fas fa-chevron-right fullDisplayArrow" onclick="nextImage('childrens')"></i>
     </div>
 
     <div id="work">
