--- a/work/graduationShow.html
+++ b/work/graduationShow.html
@@ -32,67 +32,71 @@
     </nav>
     
     <div id="fullDisplay">
+      <i class="fas fa-chevron-left fullDisplayArrow" onclick="prevImage('graduationShow')"></i>
+
       <img>
+
+      <i class="fas fa-chevron-right fullDisplayArrow" onclick="nextImage('graduationShow')"></i>
     </div>
   
     <div id="work">
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/broken_vase.jpg" onclick="fullDisplay('graduation show','broken_vase.jpg')">
+        <img class="workImg" src="../images/graduationShow/thumbnail/broken_vase.jpg" onclick="fullDisplay('graduationShow','broken_vase.jpg')">
         <h6 class="workTxt">Broken Vase</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/lace_and_feathers.jpg" onclick="fullDisplay('graduation show','lace_and_feathers.jpg')">
+        <img class="workImg" src="../images/graduationShow/thumbnail/lace_and_feathers.jpg" onclick="fullDisplay('graduationShow','lace_and_feathers.jpg')">
         <h6 class="workTxt">Lace and Feathers</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/lace_diamonds.jpg" onclick="fullDisplay('graduation show','lace_diamonds.jpg')">
+        <img class="workImg" src="../images/graduationShow/thumbnail/lace_diamonds.jpg" onclick="fullDisplay('graduationShow','lace_diamonds.jpg')">
         <h6 class="workTxt">Lace Diamonds</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/pants.jpg" onclick="fullDisplay('graduation show','pants.jpg')">
+        <img class="workImg" src="../images/graduationShow/thumbnail/pants.jpg" onclick="fullDisplay('graduationShow','pants.jpg')">
         <h6 class="workTxt">Pants</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/pink_vase.jpg" onclick="fullDisplay('graduation show','pink_vase.jpg')">
+        <img class="workImg" src="../images/graduationShow/thumbnail/pink_vase.jpg" onclick="fullDisplay('graduationShow','pink_vase.jpg')">
         <h6 class="workTxt">Pink Vase</h6>
       </div>
   
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/pool_tiles.jpg" onclick="fullDisplay('graduation show','pool_tiles.jpg')">
+        <img class="workImg" src="../images/graduationShow/thumbnail/pool_tiles.jpg" onclick="fullDisplay('graduationShow','pool_tiles.jpg')">
         <h6 class="workTxt">Pool Tiles</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/rabbit.jpg" onclick="fullDisplay('graduation show','rabbit.jpg')">
+        <img class="workImg" src="../images/graduationShow/thumbnail/rabbit.jpg" onclick="fullDisplay('graduationShow','rabbit.jpg')">
         <h6 class="workTxt">Rabbit</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/shells.jpg" onclick="fullDisplay('graduation show','shells.jpg')">
+        <img class="workImg" src="../images/graduationShow/thumbnail/shells.jpg" onclick="fullDisplay('graduationShow','shells.jpg')">
         <h6 class="workTxt">Shells</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/sock.jpg" onclick="fullDisplay('graduation show','sock.jpg')">
+        <img class="workImg" src="../images/graduationShow/thumbnail/sock.jpg" onclick="fullDisplay('graduationShow','sock.jpg')">
         <h6 class="workTxt">Sock</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/tassel.jpg" onclick="fullDisplay('graduation show','tassel.jpg')">
+        <img class="workImg" src="../images/graduationShow/thumbnail/tassel.jpg" onclick="fullDisplay('graduationShow','tassel.jpg')">
         <h6 class="workTxt">Tassel</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/vase_blue.jpg" onclick="fullDisplay('graduation show','vase_blue.jpg')">
+        <img class="workImg" src="../images/graduationShow/thumbnail/vase_blue.jpg" onclick="fullDisplay('graduationShow','vase_blue.jpg')">
         <h6 class="workTxt">Vase Blue</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/graduation show/thumbnail/white_vase.jpg" onclick="fullDisplay('graduation show','white_vase.jpg')">
+        <img class="workImg" src="../images/graduationShow/thumbnail/white_vase.jpg" onclick="fullDisplay('graduationShow','white_vase.jpg')">
         <h6 class="workTxt">White Vase</h6>
       </div>
     </div>
