--- a/work/Motion.html
+++ b/work/Motion.html
@@ -32,8 +32,12 @@
     </nav>
 
     <div id="fullDisplay">
-      <img>
-    </div>
+        <i class="fas fa-chevron-left fullDisplayArrow" onclick="prevImage('Motion')"></i>
+
+        <img>
+  
+        <i class="fas fa-chevron-right fullDisplayArrow" onclick="nextImage('Motion')"></i>
+      </div>
   
     <div id="work">
       <div class="workBlock">
