--- a/work/blackAndWhite.html
+++ b/work/blackAndWhite.html
@@ -32,22 +32,26 @@
     </nav>
 
     <div id="fullDisplay">
+      <i class="fas fa-chevron-left fullDisplayArrow" onclick="prevImage('blackAndWhite')""></i>
+
       <img>
+
+      <i class="fas fa-chevron-right fullDisplayArrow" onclick="nextImage('blackAndWhite')"></i>
     </div>
 
     <div id="work">
       <div class="workBlock">
-        <img class="workImg" src="../images/black&white/thumbnail/Frog.jpg" onclick="fullDisplay('black&white','Frog.jpg')">
+        <img class="workImg" src="../images/blackAndWhite/thumbnail/Frog.jpg" onclick="fullDisplay('blackAndWhite','Frog.jpg')">
         <h6 class="workTxt">Frog</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/black&white/thumbnail/Snake_korean.jpg" onclick="fullDisplay('black&white','Snake_korean.jpg')">
+        <img class="workImg" src="../images/blackAndWhite/thumbnail/Snake_korean.jpg" onclick="fullDisplay('blackAndWhite','Snake_korean.jpg')">
         <h6 class="workTxt">Snake Korean</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/black&white/thumbnail/Streets.jpg" onclick="fullDisplay('black&white','Streets.jpg')">
+        <img class="workImg" src="../images/blackAndWhite/thumbnail/Streets.jpg" onclick="fullDisplay('blackAndWhite','Streets.jpg')">
         <h6 class="workTxt">Streets</h6>
       </div>  
     </div>
