--- a/work/summitLogoBranding.html
+++ b/work/summitLogoBranding.html
@@ -32,32 +32,36 @@
     </nav>
     
     <div id="fullDisplay">
+      <i class="fas fa-chevron-left fullDisplayArrow" onclick="prevImage('summitLogoBranding')"></i>
+
       <img>
+
+      <i class="fas fa-chevron-right fullDisplayArrow" onclick="nextImage('summitLogoBranding')"></i>
     </div>
   
     <div id="work">
       <div class="workBlock">
-        <img class="workImg" src="../images/Summit Logo Branding/thumbnail/ppt_roadmap_1.png" onclick="fullDisplay('Summit Logo Branding','ppt_roadmap_1.png')">
+        <img class="workImg" src="../images/summitLogoBranding/thumbnail/ppt_roadmap_1.png" onclick="fullDisplay('summitLogoBranding','ppt_roadmap_1.png')">
         <h6 class="workTxt">PowerPoint Roadmap 1</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/Summit Logo Branding/thumbnail/ppt_roadmap_2.png" onclick="fullDisplay('Summit Logo Branding','ppt_roadmap_2.png')">
+        <img class="workImg" src="../images/summitLogoBranding/thumbnail/ppt_roadmap_2.png" onclick="fullDisplay('summitLogoBranding','ppt_roadmap_2.png')">
         <h6 class="workTxt">PowerPoint Roadmap 2</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/Summit Logo Branding/thumbnail/ppt_roadmap_3.png" onclick="fullDisplay('Summit Logo Branding','ppt_roadmap_3.png')">
+        <img class="workImg" src="../images/summitLogoBranding/thumbnail/ppt_roadmap_3.png" onclick="fullDisplay('summitLogoBranding','ppt_roadmap_3.png')">
         <h6 class="workTxt">PowerPoint Roadmap 3</h6>
       </div>
 
       <div class="workBlock">
-        <img class="workImg" src="../images/Summit Logo Branding/thumbnail/ppt_roadmap_4.png" onclick="fullDisplay('Summit Logo Branding','ppt_roadmap_4.png')">
+        <img class="workImg" src="../images/summitLogoBranding/thumbnail/ppt_roadmap_4.png" onclick="fullDisplay('summitLogoBranding','ppt_roadmap_4.png')">
         <h6 class="workTxt">PowerPoint Roadmap 4</h6>
       </div>
         
       <div class="workBlock">
-        <img class="workImg" src="../images/Summit Logo Branding/thumbnail/summit_logo.png" onclick="fullDisplay('Summit Logo Branding','summit_logo.png')">
+        <img class="workImg" src="../images/summitLogoBranding/thumbnail/summit_logo.png" onclick="fullDisplay('summitLogoBranding','summit_logo.png')">
         <h6 class="workTxt">Summit Logo</h6>
       </div>    
     </div>
