--- a/work.html
+++ b/work.html
@@ -52,7 +52,12 @@
         <a href="http://jialeeart.github.io/work/PS2019.html"><img class="workImg" src="images/PS2019/thumbnail/dive_training.png"></a>
         <h6 class="workTxt">PS Illustrations 2019</h6>
       </div>
-
+        
+<div class="workBlock" id="wb5">
+        <a href="http://jialeeart.github.io/work/Fox Hunt.html"><img class="workImg" src="images/Fox/fox-04.png"></a>
+        <h6 class="workTxt">Fox Hunt</h6>
+      </div>
+    </div>
         
         <div class="workBlock" id="wb6">
         <a href="http://jialeeart.github.io/work/Motion.html"><img class="workImg" src="images/Motion/thumbnails/banner.png"></a>
