--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
       </div>
         
 <div class="workBlock" id="wb5">
-        <a href="http://jialeeart.github.io/work/FoxHunt.html"><img class="workImg" src="images/Fox/fox-04.png"></a>
+        <a href="http://jialeeart.github.io/work/FoxHunt.html"><img class="workImg" src="images/fox/fox-04"></a>
         <h6 class="workTxt">Fox Hunt</h6>
       </div>
     </div>
