--- a/work/FoxHunt.html
+++ b/work/FoxHunt.html
@@ -41,19 +41,19 @@
   
     <div id="work">
       <div class="workBlock">
-        <img class="workImg" src="../images/Fox/fox-01" onclick="fullDisplay('Fox','fox-01')">
+        <img class="workImg" src="../images/Fox/fox-01.png" onclick="fullDisplay('Fox','fox-01.png')">
         <h6 class="workTxt"></h6>
       </div>
       <div class="workBlock">
-        <img class="workImg" src="../images/Fox/fox-02" onclick="fullDisplay('Fox','fox-02')">
+        <img class="workImg" src="../images/Fox/fox-02.png" onclick="fullDisplay('Fox','fox-02.png')">
         <h6 class="workTxt"></h6>
       </div>
      <div class="workBlock">
-        <img class="workImg" src="../images/Fox/fox-03" onclick="fullDisplay('Fox','fox-03')">
+        <img class="workImg" src="../images/Fox/fox-03.png" onclick="fullDisplay('Fox','fox-03.png')">
         <h6 class="workTxt"></h6>
       </div>
       <div class="workBlock">
-        <img class="workImg" src="../images/Fox/fox-04" onclick="fullDisplay('Fox','fox-04')">
+        <img class="workImg" src="../images/Fox/fox-04.png" onclick="fullDisplay('Fox','fox-04.png')">
         <h6 class="workTxt"></h6>
       </div>
     </div>
