--- a/work/FoxHunt.html
+++ b/work/FoxHunt.html
@@ -32,28 +32,28 @@
     </nav>
 
     <div id="fullDisplay">
-      <i class="fas fa-chevron-left fullDisplayArrow" onclick="prevImage('Fox')"></i>
+      <i class="fas fa-chevron-left fullDisplayArrow" onclick="prevImage('fox')"></i>
 
       <img>
 
-      <i class="fas fa-chevron-right fullDisplayArrow" onclick="nextImage('Fox')"></i>
+      <i class="fas fa-chevron-right fullDisplayArrow" onclick="nextImage('fox')"></i>
     </div>
   
     <div id="work">
       <div class="workBlock">
-        <img class="workImg" src="../images/Fox/fox-01.png" onclick="fullDisplay('Fox','fox-01.png')">
+        <img class="workImg" src="../images/fox/fox-01.png" onclick="fullDisplay('fox','fox-01.png')">
         <h6 class="workTxt"></h6>
       </div>
       <div class="workBlock">
-        <img class="workImg" src="../images/Fox/fox-02.png" onclick="fullDisplay('Fox','fox-02.png')">
+        <img class="workImg" src="../images/fox/fox-02.png" onclick="fullDisplay('fox','fox-02.png')">
         <h6 class="workTxt"></h6>
       </div>
      <div class="workBlock">
-        <img class="workImg" src="../images/Fox/fox-03.png" onclick="fullDisplay('Fox','fox-03.png')">
+        <img class="workImg" src="../images/fox/fox-03.png" onclick="fullDisplay('fox','fox-03.png')">
         <h6 class="workTxt"></h6>
       </div>
       <div class="workBlock">
-        <img class="workImg" src="../images/Fox/fox-04.png" onclick="fullDisplay('Fox','fox-04.png')">
+        <img class="workImg" src="../images/fox/fox-04.png" onclick="fullDisplay('fox','fox-04.png')">
         <h6 class="workTxt"></h6>
       </div>
     </div>
