--- a/work/FoxHunt.html
+++ b/work/FoxHunt.html
@@ -41,19 +41,19 @@
   
     <div id="work">
       <div class="workBlock">
-        <img class="workImg" src="../images/fox/fox-01.png" onclick="fullDisplay('fox','fox-01.png')">
+        <img class="workImg" src="../images/fox/thumbnail/fox-01.png" onclick="fullDisplay('fox','fox-01.png')">
         <h6 class="workTxt"></h6>
       </div>
       <div class="workBlock">
-        <img class="workImg" src="../images/fox/fox-02.png" onclick="fullDisplay('fox','fox-02.png')">
+        <img class="workImg" src="../images/fox/thumbnail/fox-02.png" onclick="fullDisplay('fox','fox-02.png')">
         <h6 class="workTxt"></h6>
       </div>
      <div class="workBlock">
-        <img class="workImg" src="../images/fox/fox-03.png" onclick="fullDisplay('fox','fox-03.png')">
+        <img class="workImg" src="../images/fox/thumbnail/fox-03.png" onclick="fullDisplay('fox','fox-03.png')">
         <h6 class="workTxt"></h6>
       </div>
       <div class="workBlock">
-        <img class="workImg" src="../images/fox/fox-04.png" onclick="fullDisplay('fox','fox-04.png')">
+        <img class="workImg" src="../images/fox/thumbnail/fox-04.png" onclick="fullDisplay('fox','fox-04.png')">
         <h6 class="workTxt"></h6>
       </div>
     </div>
